hphp/test/slow/php7_backported/scalar-types/scalar_relative_typehint_disallowed.php.expectf

Fatal error: An expression is expected here. in %s/scalar_relative_typehint_disallowed.php on line 8
